@@ -1,0 +1,12 @@
+EXTRA_DIST = CHOOSING.A.GENERATOR WHATS.CHANGED.in.0.75			\
+doc.generators.table WHATS.LEFT.TODO doc.quality.generators		\
+WHATS.NEW.in.0.7 doc.timings DEFAULT.GENERATORS data.NormalDist.h	\
+methods.NormalDist.h README.Distributions.v07 data.SimpleGenerators.h	\
+methods.SimpleGenerators.h README.Generators.v075			\
+data.SplitGenerators.h methods.SplitGenerators.h SOURCES.for.0.7	\
+dir.txt WHATS.CHANGED.in.0.7 doc.generators.maxvalue
+
+
+# Local variables:
+# mode: makefile
+# end:
